--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,9 +1,9 @@
-Flask==1.1.2
-Flask-SQLAlchemy==2.5.1
-Flask-Bcrypt==0.7.1
-Flask-Migrate==2.7.0
-Flask-Cors==3.0.10
-Flask-JWT-Extended==3.25.1
-mysqlclient==2.0.3
-python-dotenv==0.19.1
-gunicorn==20.1.0
+Flask
+Flask-SQLAlchemy
+Flask-Bcrypt
+Flask-Migrate
+Flask-Cors
+Flask-JWT-Extended
+mysqlclient
+python-dotenv
+gunicorn
